Change `context` to `state` #2

--- a/avril/templates/message_log_detail.html
+++ b/avril/templates/message_log_detail.html
@@ -104,12 +104,12 @@
                 </div>
 
                 <div class="row balloon-row text-break">
-                    <h2>Context (OnStart / OnEnd)</h2>
+                    <h2>State (OnStart / OnEnd)</h2>
                     <div class="col balloon-box balloon-box-left">
-                        <pre>{{data.ml.context_on_start | format_json}}</pre>
+                        <pre>{{data.ml.state_on_start | format_json}}</pre>
                     </div>
                     <div class="col balloon-box balloon-box-right">
-                        <pre>{{data.ml.context_on_end | format_json}}</pre>
+                        <pre>{{data.ml.state_on_end | format_json}}</pre>
                     </div>
                 </div>
 
