--- a/avril/templates/history_detail.html
+++ b/avril/templates/history_detail.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-yJpxAFV0Ip/w63YkZfDWDTU6re/Oc3ZiVqMa97pi8uPt92y0wzeK3UFM2yQRhEom" crossorigin="anonymous">
-        <title>メッセージログ詳細</title>
+        <title>会話詳細</title>
         <style>
             body {
                 background-color: #eeeeee;
@@ -53,7 +53,7 @@
     </head>
     <body>
         <div class="container">
-            <h1>メッセージログ詳細</h1>
+            <h1>会話の詳細</h1>
             <div class="container">
                 <div class="row balloon-row">
                     <div class="col user-balloon-icon">
