--- a/avril/templates/history_detail.html
+++ b/avril/templates/history_detail.html
@@ -68,7 +68,15 @@
                         </div>
                         {% endif %}
                         <div class="balloon-box">
+                            {% if data.ml.request.event.type == "message" %}
+                                {% if data.ml.request.event.message.type == "text" %}
                             <p>{{data.ml.request.event.message.text}}</p>
+                                {% else %}
+                            <p>({{data.ml.request.event.message.type}}メッセージ)</p>
+                                {% endif %}
+                            {% else %}
+                            <p>({{data.ml.request.event.type}}イベント)</p>
+                            {% endif %}
                             <span class="timestamp">{{data.ml.request.timestamp|timestamp_to_str}}&nbsp;({{data.ml.response_time}}ms)</span>
                         </div>
                     </div>
